--- a/neutrinos.tex
+++ b/neutrinos.tex
@@ -246,20 +246,20 @@ The main things to notice here are $\delta_{ij}$ which is the CP violating term 
 %The currently-running T2K experiment uses a neutrino beam directed through 295 km of earth, and will measure the parameter θ13. The experiment uses the Super-K detector. NOνA is a similar effort. This detector will use the same beam as MINOS and will have a baseline of 810 km.
 
 
-\section{Unanswered questions about Neutrinos }
-There are many questions that haven't been answered by previous experiments. Many of them I have touched upon in previous sections, but here is a formal list of questions left unanswered. 
-\begin{itemize}
-\item What is the sign of $\Delta m^{2}_{23}$?
-\item Are there more than three active neutrinos? (LSND experiment)
-\item Are the neutrinos and antineutrinos identical?
-\item Is there a CP violating term that needs to addressed. 
-\item Will $\delta_{cp}$ explain matter-antimatter asymmetry?  
-\item Why is the PMNS matrix so different in form to the CKM matrix( quark mixing matrix)
-\end{itemize}
+%\section{Unanswered questions about Neutrinos }
+%There are many questions that haven't been answered by previous experiments. Many of them I have touched upon in previous sections, but here is a formal list of questions left unanswered. 
+%\begin{itemize}
+%\item What is the sign of $\Delta m^{2}_{23}$?
+%\item Are there more than three active neutrinos? (LSND experiment)
+%\item Are the neutrinos and antineutrinos identical?
+%\item Is there a CP violating term that needs to addressed. 
+%\item Will $\delta_{cp}$ explain matter-antimatter asymmetry?  
+%\item Why is the PMNS matrix so different in form to the CKM matrix( quark mixing matrix)
+%\end{itemize}
 
 
-\section{Final Thoughts}
-Although there is much about neutrinos that we don't know, we have made much progress in trying to understand these elusive particles. We now know that neutrinos aren't massless and because of this knowledge we now know that neutrinos oscillate between flavour and mass eigenstates. We have also just recently discovered that $\theta_{13}$ is non-zero and this knowledge will lead to experiments and data analysis to find $\delta_{cp}$.
-\clearpage
+%\section{Final Thoughts}
+%Although there is much about neutrinos that we don't know, we have made much progress in trying to understand these elusive particles. We now know that neutrinos aren't massless and because of this knowledge we now know that neutrinos oscillate between flavour and mass eigenstates. We have also just recently discovered that $\theta_{13}$ is non-zero and this knowledge will lead to experiments and data analysis to find $\delta_{cp}$.
+%\clearpage
 
-More introduction
+%More introduction
