--- a/beam.tex
+++ b/beam.tex
@@ -5,13 +5,13 @@ The MicroBooNE detector is stationed at FNAL where it receives neutrinos from bo
 \begin{figure}[htp!]
 \centering
 	\begin{subfigure}[b]{.4\textwidth}
-	\includegraphics[width=\textwidth]{lee.png}
+	\includegraphics[width=\textwidth]{figs/lee.png}
 	\label{fig:lee}
 	\caption{Energy spectrum of the Booster Neutrino Beam at Fermi National Laboratories}
 	\end{subfigure}
 	\quad
 	\begin{subfigure}[b]{.4\textwidth}
-	\includegraphics[height=2in, width=3.5in]{bnbflux.png}
+	\includegraphics[width=\textwidth]{figs/bnbflux.png}
 	\label{fig:bnbflux}
 	\caption{Energy spectrum of the Booster Neutrino Beam at Fermi National Laboratories}
 	\end{subfigure}
