--- a/preamble.tex
+++ b/preamble.tex
@@ -9,7 +9,8 @@
 \usepackage[rightcaption]{sidecap}
 \usepackage{pgfgantt}
 \usepackage{rotating}
-\usepackage[usenames,dvipsnames,svgnames,table]{xcolor}
+%\usepackage[usenames,dvipsnames,svgnames,table]{xcolor}
+\usepackage{xcolor}
 
 
 %% Using Babel allows other languages to be used and mixed-in easily
@@ -92,14 +93,14 @@
 \usepackage{adjustbox} % for clipping seal images in xelatex
 \usepackage{rotating} % for sidewaysfigure
 
-\usepackage[tracking=true]{microtype}
-\SetTracking
- [ no ligatures = {f},
- spacing = {600*,-100*, },
- outer spacing = {450,250,150},
- outer kerning = {*,*} ]
- { encoding = * }
- { 160 }
+%\usepackage[tracking=true]{microtype}
+%\SetTracking
+% [ no ligatures = {f},
+% spacing = {600*,-100*, },
+% outer spacing = {450,250,150},
+% outer kerning = {*,*} ]
+% { encoding = * }
+% { 160 }
 \newcommand\tracked[1]{\textls{#1}}
 
 % if using xelatex, will also format math
