--- a/preamble.tex
+++ b/preamble.tex
@@ -1,6 +1,8 @@
 \usepackage{xspace}
 \usepackage{tikz}
-\usepackage{morefloats,afterpage,subcaption}
+\usepackage{caption}
+\usepackage[list=true, listformat=simple]{subcaption}
+\usepackage{morefloats,afterpage}
 \usepackage{mathrsfs} % script font
 \usepackage{verbatim}
 
