--- a/example.tex
+++ b/example.tex
@@ -114,6 +114,7 @@ Syracuse, New York
   \input{meas}
   \input{mupiseparation}
   \input{cnn}
+  \input{syr_cluster}
   \input{cnn_results}
   \input{data}
   \input{selImodcompare}
