--- a/cnn_results.tex
+++ b/cnn_results.tex
@@ -299,7 +299,7 @@ Another check was to see if any true CC pions were passing through the cut right
 \centering
 	\begin{subfigure}[b]{.3\textwidth}
 	\includegraphics[width=\textwidth,height=2.5in]{figs/interesting_event.png}
-	\caption{Pion recontructed track range is less than 75 cm and longer than muon reconstructed track due to dead wires}
+	\caption{Pion recontructed track range is less than 75 cm and longer than muon track due to dead wires}
 	\label{fig:longer_muon_badreco}
 	\end{subfigure}
 	\quad
