--- a/frontmatter.tex
+++ b/frontmatter.tex
@@ -58,8 +58,8 @@ The purpose of this thesis was to use Convolutional Neural Networks (CNN) to sep
 
 %% Strictly optional!
 \frontquote{%
-  Well-behaved women \\
-  seldom make history.}%
-  {Laurel Thatcher Ulrich}
+  If the don't give you a seat at the table, \\
+  bring a folding chair.}%
+  {Shirley Chisholm}
 %% I don't want a page number on the following blank page either.
 \thispagestyle{empty}
