--- a/MicroBooNE.tex
+++ b/MicroBooNE.tex
@@ -12,4 +12,4 @@ The light collection system is a crucial part for 3D reconstruction of particle 
 
 The light collection system is made up of 32 Hammamatsu R5912-02mod cryogenic PMTs with a diameter of 8-inches. The PMTs are are located behind the 3 wire anode planes and provides 0.85\% photocathode coverage. Each PMT has an acrylic plate mounted in front of it that is coated with a wave-length shifting material called TPB. The acrylic plates take in the scintillation light, at 128 nm, and re-emits it visible wavelengths visible to the PMTs, with a peak at 425 nm. 
 \section{Electronics System} 
-More MicroBooNE stuff.
+More MicroBooNE stuff. Possibly talk about rack protection system work I did i.e circuit board soudering? Talk about deconvolution paper Adam and I wrote a while back?
