--- a/example.bib
+++ b/example.bib
@@ -49,6 +49,13 @@
      author = "Buckley, Andy",
      title  = "The hepthesis {\LaTeX} class"
 }
+@Article{dune,
+     author    = "Acciari, R. et al.",
+ collaboration = "MicroBooNE",
+     title     = "Long-Baseline Neutrino Facility (LBNF) and Deep Underground Neutrino Experiment (DUNE)",
+     note      = "arXiv:1512.06148",
+     year      = "2015",
+}
 
 \bibitem{dune}R.Acciari et al., "Long-Baseline Neutrino Facility (LBNF) and Deep Underground Neutrino Experiment (DUNE)", arXiv:1512.06148, (2015).
 \bibitem{noisechar} The MicroBooNE Collaboration, "Noise Characterization and Filtering in the MicroBooNE Liquid Argon TPC", arXiv:1705.07341,(2016).
